added footer in App.tsx, adjusted position of alert to always stay on top on form and not float on top. Trying to position description text to start of toast box. WIP

--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,5 @@
   --color-custom-white: hsl(0, 0%, 100%);
   --color-custom-grey-medium: hsl(186, 15%, 59%);
   --color-custom-grey-dark: hsl(187, 24%, 22%);
+  --color-custom-blue:hsl(228, 45%, 44%);
 }
